// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render <ScrollPercentage /> 1`] = `
<ScrollPercentage
  tag="div"
  threshold={0}
>
  <Observer
    onChange={[Function]}
    threshold={0}
    triggerOnce={false}
  >
    <div>
      <div>
        inner
      </div>
    </div>
  </Observer>
</ScrollPercentage>
`;

exports[`Should render <ScrollPercentage /> with custom tag 1`] = `
<ScrollPercentage
  className="wrapperClass"
  tag="span"
  threshold={0}
>
  <Observer
    onChange={[Function]}
    threshold={0}
    triggerOnce={false}
  >
    <span
      className="wrapperClass"
    >
      <div>
        inner
      </div>
    </span>
  </Observer>
</ScrollPercentage>
`;

exports[`Should render with child 1`] = `
<ScrollPercentage
  tag="div"
  threshold={0}
>
  <Observer
    onChange={[Function]}
    threshold={0}
    triggerOnce={false}
  >
    <div>
      <div>
        Inner
      </div>
    </div>
  </Observer>
</ScrollPercentage>
`;
